testing/dns-debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-debug
  namespace: test
spec:
  containers:
    - name: busybox
      image: busybox:1.28
      command: ["sleep", "3600"]
  nodeSelector:
    karpenter.sh/controller: "true"
  tolerations:
    - key: "CriticalAddonsOnly"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
