testing/efs-test.yaml
# test-pod-coastline.yaml
apiVersion: v1
kind: Pod
metadata:
  name: efs-coastline-test
  namespace: jupyterhub
spec:
  containers:
    - name: test-container
      image: alpine:3.22
      command: ["/bin/sh"]
      args: ["-c", "while true; do sleep 30; done"]
      volumeMounts:
        - name: efs-coastline-data
          mountPath: /mnt/efs-coastline
      resources:
        requests:
          cpu: 10m
          memory: 32Mi
        limits:
          cpu: 100m
          memory: 128Mi
  volumes:
    - name: efs-coastline-data
      persistentVolumeClaim:
        claimName: efs-coastline-data
  restartPolicy: Never
