testing/odc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odc-app
  namespace: database
spec:
  selector:
    matchLabels:
      app: odc
  template:
    metadata:
      labels:
        app: odc
    spec:
      containers:
        - name: odc
          image: 686410905891.dkr.ecr.ap-southeast-3.amazonaws.com/piksel-core:odc-b8f23f1
