testing/postgres-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-test-client
  namespace: database
spec:
  containers:
    - name: postgres-client
      image: alpine:3.22
      command:
        - /bin/sh
        - -c
        - |
          [...]
  restartPolicy: Never
